--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,19 +18,19 @@
         android:theme="@style/Theme.PrettyPet"
         tools:targetApi="31">
         <activity
-            android:name=".PetCardActivity"
+            android:name=".activities.PetCardActivity"
             android:exported="false" />
         <activity
-            android:name=".PetActivity"
+            android:name=".activities.PetActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.MainActivity"
             android:exported="false" />
         <activity
-            android:name=".RegistrationActivity"
+            android:name=".activities.RegistrationActivity"
             android:exported="false" />
         <activity
-            android:name=".LoginActivity"
+            android:name=".activities.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
